module-1-explore-vms/manifests/cars-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cars-vm
  namespace: travel-agency
  labels:
    app: cars-vm
spec:
  ports:
    - port: 8000
      name: http
  selector:
    kubevirt.io/domain: cars-vm
